# markdown-reader

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.vue  RenderArea.vue  Sidebar.vue  TocPanel.vue  Toolbar.vue
src/lib/: markdown.ts  toc.ts
src/stores/: fileStore.ts  settingsStore.ts
src/styles/: global.css
src/styles/themes/: dark.css  light.css
tests/lib/: markdown.test.ts  toc.test.ts
tests/stores/: fileStore.test.ts  settingsStore.test.ts
