[package]
name = "markdown-reader"
version = "0.1.0"
description = "A Markdown Reader desktop app"
authors = []
edition = "2021"

[lib]
name = "markdown_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
